tests/todo/syntax_error_at_eof.expected
Syntax error: Expected ';'
   1 | var a = error
     |              ^
